2001-10-31  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-pop-up-windows): Changed default value
	(See [emacs-w3m: 01999]).

	* w3m-e21.el (w3m-tab-unselected-face): Changed underline color.
	(w3m-tab-selected-face): Ditto.
	(w3m-tab-background-face): Ditto.
	(w3m-tab-line): Removed needless local variable `len'.

2001-10-30  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-header-line-location-title-face): Specify background
	color.
	(w3m-header-line-location-title-face): Ditto.
	(w3m-use-tab): New user option.
	(w3m-tab-width): Ditto.
	(w3m-tab-unselected-face): New face.
	(w3m-tab-selected-face): Ditto.
	(w3m-tab-background-face): Ditto.
	(w3m-header-line-map): New variable.
	(w3m-setup-header-line): If w3m-use-tab is non-nil, use header-line
	as a tab area.
	(w3m-insert-header-line): New function.
	(w3m-tab-make-keymap): New function.
	(w3m-tab-line): New function.
	(w3m-fontify-after-hook): Add 'w3m-insert-header-line.

2001-10-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-reload-this-page): If form data exist, ask to make
	use of its. Check form data modified.

	* shimbun/mew-shimbun.el (mew-shimbun-remove-unseen-one): Remove
	'win' option. Do not save mew-cache.
	(mew-shimbun-remove-unseen, mew-shimbun-remove-unseen-all) 
	(mew-shimbun-remove-unseen-advice): Call
	mew-shimbun-remove-unseen-one() without `win' option.
	(mew-shimbun-unseen-setup): New defadvice for mew-kill-buffer()
	and mew-remove-buffer().

	* README.shimbun.ja (mew-shimbun.el): Modify description.

2001-10-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-form-parse-forms): Dismantle `w3m-current-url'
	of its query part before the rest is refered as the default value
	of the action.

	* w3m.el (w3m-ccl-write-repeat): Accept optional arguments to
	avoid difference between Emacesn on CCL.
	(w3m-iso-latin-1-decoder): Call `w3m-ccl-write-repeat' with
	optional argument.

2001-10-30  Hideyuki SHIRAI  <shirai@meadowy.org>
